# nixtla_blog_examples

./: .gitignore  CONTRIBUTION.md  pyproject.toml
data/: HierarchicalForecasting_TourismData_2Region.parquet  test_ridership.parquet  tourism.parquet  train_ridership.parquet
notebooks/: ARIMA_ETS.py  anomaly_detection.ipynb  anomaly_detection.py  automated-time-series-feature-engineering-with-mlforecast.ipynb  baseline_forecasts.ipynb  baseline_forecasts.py  eliminate-manual-arima-tuning-using-statsforecast-autoarima-automation.ipynb  from-manual-parameter-tuning-to-automatic-forecasting-mastering-statsforecast-autoarima.ipynb  hierarchical_forecasts.py  intermittent_forecasting.ipynb  intermittent_forecasting.py  stop-manual-feature-engineering-mlforecast.ipynb
public/notebooks/: baseline_forecasts.html  intermittent_forecasting.html
